--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
        <script src="js/services.js"></script>
        <script src="js/index.js"></script>
        <script src="js/pushInfo.js"></script>
-       <!-- <script src="js/pay.js"></script> -->
+       <script src="js/pay.js"></script>
 
   </body>
 </html>
