--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
        <script src="js/index.js"></script>
        <script src="js/pushInfo.js"></script>
        <script src="js/pay.js"></script>
+       <!-- <script src="js/toast.js"></script> -->
 
   </body>
 </html>
