--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
        <script src="js/common.js"></script>
        <script src="js/controllers.js"></script>
        <script src="js/app.js"></script>
-       <script src="js/services.js"></script>
+       <script src="jEs/services.js"></script>
        <script src="js/index.js"></script>
        <script src="js/pushInfo.js"></script>
-       <script src="js/pay.js"></script>
+       <!-- <script src="js/pay.js"></script> -->
        <!-- <script src="js/toast.js"></script> -->
 
   </body>
