--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
        <script src="jEs/services.js"></script>
        <script src="js/index.js"></script>
        <script src="js/pushInfo.js"></script>
-       <!-- <script src="js/pay.js"></script> -->
+       <script src="js/pay.js"></script>
        <!-- <script src="js/toast.js"></script> -->
 
   </body>
