--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title></title>
       <script src="js/t.js"></script>
     <link href="lib/css/ionic.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/app.min.css">
+    <link rel="stylesheet" href="css/app.css">
 
 
    </head>
