--- a/example/index.html
+++ b/example/index.html
@@ -6,15 +6,15 @@
 
     <title></title>
     <link rel="stylesheet" href="http://cdn.bootcss.com/ionic/1.2.4/css/ionic.min.css">
-    <link rel="stylesheet" href="example/advanced/app.min.css">
+    <link rel="stylesheet" href="./app.min.css">
   </head>
   <body>
 
     <div id="app"></div>
 
     <script src="http://localhost:8080/webpack-dev-server.js"></script>
-    <script src="/fetch.min.js"></script>
-    <script src="/example.build.js"></script>
+    <script src="./fetch.min.js"></script>
+    <script src="./example.build.js"></script>
 
   </body>
 </html>
