--- a/example/index.html
+++ b/example/index.html
@@ -15,6 +15,10 @@
     <script src="http://localhost:8080/webpack-dev-server.js"></script>
     <script src="./fetch.min.js"></script>
     <script src="./example.build.js"></script>
-
+    <script>
+    window.config={
+      host:"115.29.114.161"
+    }
+    </script>
   </body>
 </html>
