--- a/index.html
+++ b/index.html
@@ -1,30 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title></title>
-      <script src="js/t.js"></script>
-    <link href="lib/css/ionic.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="http://cdn.bootcss.com/ionic/1.2.4/css/ionic.min.css">
+    <link rel="stylesheet" href="./app.min.css">
+  </head>
+  <body>
 
+    <div id="app"></div>
 
-   </head>
-  <body ng-app="myApp">
-    <ion-nav-view></ion-nav-view>
-       <script src="lib/js/ionic.bundle.min.js"></script>
-       <script src="lib/jquery/jquery.min.js"></script>
-       <script src="lib/jquery/jquery.qrcode.min.js"></script>
-       <script src="cordova.js"></script>
-       <script src="js/common.js"></script>
-       <script src="js/controllers.js"></script>
-       <script src="js/app.js"></script>
-       <script src="js/services.js"></script>
-       <script src="js/index.js"></script>
-       <script src="js/pushInfo.js"></script>
-       <script src="js/pay.js"></script>
-       <script src="js/myToast.js"></script>
-       <!-- <script src="js/toast.js"></script> -->
-
+    <script src="http://localhost:8080/webpack-dev-server.js"></script>
+    <script src="./fetch.min.js"></script>
+    <script src="./example.build.js"></script>
+    <script>
+    window.config={
+      host:"115.29.114.161"
+    }
+    </script>
   </body>
 </html>
