--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <button id="btn">关闭</button>
 
 <script>
-  btn.onclick=function(){
+var bt=document.getElementById('btn');
+  bt.onclick=function(){
     window.close()
   }
 </script>
